Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1081,7 +1081,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for rank_of_city in city_indices:\n",
-    "    names_and_ranks.append(f\"{rank_of_city + 1}. {city_names[rank_of_city]}\")jyjyty\n",
+    "    names_and_ranks.append(f\"{rank_of_city + 1}. {city_names[rank_of_city]}\")\n",
     "\n",
     "names_and_ranks\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
